syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse){}
  rpc LoginWithOtp(LoginWithOtpRequest) returns (LoginWithOtpResponse) {}
  rpc OtpValidate(OtpValidationRequest) returns (OtpValidationResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc AdminValidate(ValidateRequest) returns (AdminValidateResponse) {}
  rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse) {}
  rpc UserList(UserListRequest) returns (UserListResponse) {}
  rpc ChangeUserPermission(ChangeUserPermissionRequest) returns (ChangeUserPermissionResponse) {}

}

// SignUp

message SignUpRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  string confirmpassword = 5;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
  User user=3;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
  User user =4;
}


// AdminLogin

message AdminLoginRequest {
  string email = 1;
  string password = 2;
}

message AdminLoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Login with otp

message LoginWithOtpRequest {
  string phone = 1;
}

message LoginWithOtpResponse {
  int64 status = 1;
  string error = 2;
}
// Otp validation

message OtpValidationRequest {
  string phone = 1;
  string otp = 2;
  string password = 3;
  string confirm = 4;
}

message OtpValidationResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}

message AdminValidateResponse {
  int64 status = 1;
  string error = 2;
  string role = 3;
}

message GetUserDetailsRequest {
  int32 userid = 1;
}

message GetUserDetailsResponse {
  int64 status = 1;
  string error = 2;
  User user = 3;
}


//UserList

message UserListRequest {
  int32 page = 1;
  int32 limit = 2;
  string searchkey = 3;
}

message UserListResponse {
  int64 status = 1;
  string error = 2;
  repeated User user = 3;
}


//ChangeUserPermission
message ChangeUserPermissionRequest {
  int32 id = 1;
}

message ChangeUserPermissionResponse {
  int64 status = 1;
  string error = 2;
  User user = 3;
}

message User {
  string name = 1;
  string email = 2;
  string phone = 3;
  string status = 4;
  int32 id = 5;
}

